--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Vargi-Bots</title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaolkuSPpv0E8UzZHjNdULuZUf-bG8CCs&callback=refreshDashboard&libraries=&v=weekly"
-      async
+      async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaolkuSPpv0E8UzZHjNdULuZUf-bG8CCs&callback=refreshDashboard
     ></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <style type="text/css">
