--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Vargi-Bots</title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script
+      defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaolkuSPpv0E8UzZHjNdULuZUf-bG8CCs&callback=refreshDashboard&libraries=&v=weekly"
       async
     ></script>
